Add Diagnostics (especially for Vercel)
